--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,16 @@
 			<artifactId>jedis</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		<!--elasticsearch-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-elasticsearch</artifactId>
+			<version>3.2.6.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 
